--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Articles</h1>
 
 <ul>
-    <% @articles.each do |article| %>
+  <% @articles.each do |article| %>
     <li>
-        <%= article.title %>
+      <%= link_to article.title, article %>
     </li>
-    <% end %>
+  <% end %>
 </ul>
