--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,17 @@
+<ul>
+<%= button_to "<--", article_index_path(@article) %>
+</ul>
 <h1><%= @article.title %></h1>
 
 <p><%= @article.body %></p>
+
+<ul>
+    <li><%= button_to "Edit", edit_article_path(@article) %></li>
+    
+    <li> 
+    <%= button_to "Delete", @article, :method => :delete %>
+    </li>
+
+</ul>
+
+
