Routes are no longer the enemy

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <ul>
-<%= button_to "<--", article_index_path(@article) %>
+<%= button_to "<--", articles_path, method: :get %>
 </ul>
 <h1><%= @article.title %></h1>
 
